# conv3d

./: Cargo.toml
src/: gltf_builder.rs  main.rs
