[package]
name = "conv3d"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
glob = "0.3.1"
gltf = "1.4.1"
rayon = "1.10.0"
stl_io = "0.8.2"


[features]
default = [ "KHR_materials_pbrSpecularGlossiness" ]
KHR_materials_pbrSpecularGlossiness = [ "gltf/KHR_materials_pbrSpecularGlossiness" ]
KHR_lights_punctual = [ "gltf/KHR_lights_punctual" ]
